[project]
name = "scrap-wool"
version = "0.1.0"
description = ""
authors = [
    {name = "gochi-north",email = "gochi@gonorth.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "fake-useragent (>=1.4.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "openai (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
